--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 
 h2, h3 {
   margin-bottom: 5px;
+  font-weight: 800;
 }
 
 ul, ol {
@@ -118,7 +119,7 @@ iframe {
   font: bold 42px 'Elsie Swash Caps', cursive;
   color: white;
   text-shadow: 0 2px 3px #000;
-  margin: 0 0 10px;
+  margin: 10px 0 10px;
 }
 
 .border_right {
@@ -268,6 +269,7 @@ section a {
 
 #details {
   clear:both;
+  margin-left: 20px;
   padding: 20px 10px;
   /* gradient */
   background: rgb(229,229,229); /* Old browsers */
